data/src/main/java/com/example/data/network/error/IncorrectPasswordException.kt
package com.example.data.network.error

class IncorrectPasswordException: RuntimeException()